--- a/requirements.txt
+++ b/requirements.txt
@@ -1,157 +1,49 @@
-absl-py==2.3.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-aliyun-python-sdk-core==2.16.0
-aliyun-python-sdk-kms==2.16.5
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyascii==0.3.3
-anyio==4.12.0
-astunparse==1.6.3
-async-timeout==5.0.1
-attrs==25.4.0
-audioread==3.1.0
-babel==2.17.0
-catalogue==2.0.10
-certifi==2025.11.12
-cffi==2.0.0
-charset-normalizer==3.4.4
-contourpy==1.3.2
-coqpit-config==0.2.2
-coqui-tts==0.27.3
-coqui-tts-trainer==0.3.2
-crcmod==1.7
-cryptography==46.0.3
-cycler==0.12.1
-dateparser==1.1.8
-decorator==5.2.1
-distro==1.9.0
-docopt==0.6.2
-editdistance==0.8.1
-einops==0.8.1
-encodec==0.1.1
-exceptiongroup==1.3.1
-filelock==3.20.1
-flatbuffers==25.12.19
-fonttools==4.61.1
-frozenlist==1.8.0
-fsspec==2025.12.0
-funasr==1.2.9
-gast==0.7.0
-google-pasta==0.2.0
-grpcio==1.76.0
-gruut==2.4.0
-gruut-ipa==0.13.0
-gruut-lang-de==2.0.1
-gruut-lang-en==2.0.1
-gruut-lang-es==2.0.1
-gruut-lang-fr==2.0.2
-h11==0.16.0
-h5py==3.15.1
-hf-xet==1.2.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.36.0
-hydra-core==1.3.2
-idna==3.11
-inflect==7.5.0
-jaconv==0.4.1
-jamo==0.4.1
-jieba==0.42.1
-jinja2==3.1.6
-jiter==0.12.0
-jmespath==0.10.0
-joblib==1.5.3
-jsonlines==1.2.0
-kaldiio==2.18.1
-keras==3.12.0
-kiwisolver==1.4.9
-ko-speech-tools==0.1.0
-lazy-loader==0.4
-libclang==18.1.1
-librosa==0.11.0
-llvmlite==0.46.0
-markdown==3.10
-markdown-it-py==4.0.0
-markupsafe==3.0.3
-matplotlib==3.10.8
-mdurl==0.1.2
-ml-dtypes==0.5.4
-modelscope==1.33.0
-monotonic-alignment-search==0.2.1
-more-itertools==10.8.0
-mpmath==1.3.0
-msgpack==1.1.2
-multidict==6.7.0
-namex==0.1.0
-networkx==3.4.2
-num2words==0.5.14
-numba==0.63.1
-numpy==2.2.6
-omegaconf==2.3.0
-openai==2.14.0
-opt-einsum==3.4.0
-optree==0.18.0
-oss2==2.19.1
-packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
-platformdirs==4.5.1
-pooch==1.8.2
-propcache==0.4.1
-protobuf==6.33.2
-psutil==7.2.0
-pycparser==2.23
-pycryptodome==3.23.0
-pydantic==2.12.5
-pydantic-core==2.41.5
-pygments==2.19.2
-pynndescent==0.5.13
-pyparsing==3.3.1
-pypinyin==0.55.0
-pysbd==0.3.4
-python-crfsuite==0.9.12
-python-dateutil==2.9.0.post0
-pytorch-wpe==0.0.1
-pytz==2025.2
-pyyaml==6.0.3
-regex==2025.11.3
-requests==2.32.5
-rich==14.2.0
-safetensors==0.7.0
-scikit-learn==1.7.2
-scipy==1.15.3
-sentencepiece==0.2.1
-setuptools==80.9.0
-six==1.17.0
-sniffio==1.3.1
-sounddevice==0.5.3
-soundfile==0.13.1
-soxr==1.0.0
-spacy-pkuseg==1.0.1
-srsly==2.5.2
-sympy==1.14.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorboardx==2.6.4
-tensorflow==2.20.0
-termcolor==3.2.0
-threadpoolctl==3.6.0
-tokenizers==0.22.1
-torch==2.9.1
-torch-complex==0.4.4
-torchaudio==2.9.1
-tqdm==4.67.1
-transformers==4.57.3
-typeguard==4.4.4
-typing-extensions==4.15.0
-typing-inspection==0.4.2
-tzdata==2025.3
-tzlocal==5.3.1
-umap-learn==0.5.9.post2
-urllib3==2.6.2
-werkzeug==3.1.4
-wheel==0.45.1
-wrapt==2.0.1
-yarl==1.22.0
+# ===== 基础科学计算 / 工具 =====
+numpy
+scipy
+numba
+soundfile
+librosa
+anyascii
+typing_extensions
+
+# ===== Coqui TTS（新维护的 fork，不用老的 TTS 包）=====
+coqui-tts
+coqpit-config
+coqui-tts[zh]
+# ===== ASR：FunASR + ModelScope =====
+funasr
+modelscope
+onnxruntime
+
+# ===== 录音 / 播放（按需选一个）=====
+# Windows 上：
+pyaudio
+# 或者跨平台：
+sounddevice
+
+# ===== 备用 TTS（系统自带声音，做 fallback 用，不想要可以删）=====
+pyttsx3
+
+# ===== LLM / HTTP 调用 =====
+requests
+openai
+
+# ===== 语音增强相关 =====
+noisereduce>=3.0.0        # 经典降噪库
+webrtcvad>=2.0.10         # 语音活动检测
+rnnoise-python>=1.0.0     # RNNoise降噪库
+librosa>=0.10.0           # 音频处理 (已有)
+scipy>=1.10.0             # 信号处理 (已有)
+
+# ===== 声纹识别相关 =====
+speechbrain>=0.5.16       # SpeechBrain框架 (ECAPA-TDNN)
+torch>=2.0.0              # PyTorch
+torchaudio>=2.0.0         # 音频处理
+scikit-learn>=1.3.0       # 相似度计算
+huggingface-hub>=0.17.0   # HuggingFace模型下载
+
+# ===== 杂项（日志、配置等，一般 stdlib 就够，这里不额外加）=====
+pandas
+modelscope
+tensorflow
