--- a/requirements.txt
+++ b/requirements.txt
@@ -34,11 +34,12 @@ webrtcvad>=2.0.10
 # rnnoise-python 从GitHub安装（替代PyPI）下载不下来
 
 # ===== 声纹识别相关（指定兼容版本）=====
-speechbrain>=0.5.16
-torch==2.3.0+cu121
-torchaudio==2.3.0+cu121
+speechbrain @ git+https://github.com/speechbrain/speechbrain.git
+torch>=2.1.0
+torchaudio>=2.1.0
 scikit-learn>=1.3.0
 huggingface-hub>=0.17.0
 
 # ===== 可选：TensorFlow（兼容版本）=====
-tensorflow>=2.10.0,<2.15.0
+tensorflow>=2.10.0,<2.15.0; sys_platform != 'darwin'
+# Mac上TensorFlow安装比较麻烦，且本项目核心不依赖它，故在Mac上跳过
